--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -1,5 +1,16 @@
 [NetworkTables Storage 3.0]
 double "/Preferences/auto.center.drive.distance"=93
-double "/Preferences/fuelintake.run.speed"=0.8
 boolean "/Preferences/init.preferences.block"=true
 double "/Preferences/winch.winch.run.speed"=1
+
+double "/Preferences/fuelintake.Fuelintake.speed"=0.8
+
+int "/Preferences/auto.BoilerPositionBlue.drive1.distance"=108
+double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.8
+double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.8
+int "/Preferences/auto.BoilerPositionBlue.pivot.distance"=108
+int "/Preferences/auto.BoilerPositionBlue.drive2.distance"=72
+double "/Preferences/auto.BoilerPositionBlue.drive2.speed"=-0.8
+int "/Preferences/auto.BoilerPositionBlue.drive3.distance"=-12
+double "/Preferences/auto.BoilerPositionBlue.drive3.speed"=-0.25
+double "/Preferences/auto.BoilerPositionBlue.gearApproach.speed"=0.5
