Updates Initial_Preferences and adds more preferences.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -1,9 +1,5 @@
 [NetworkTables Storage 3.0]
 double "/Preferences/auto.center.drive.distance"=93
-boolean "/Preferences/init.preferences.block"=true
-double "/Preferences/winch.winch.run.speed"=1
-
-double "/Preferences/fuelintake.Fuelintake.speed"=0.8
 
 int "/Preferences/auto.BoilerPositionBlue.drive1.distance"=108
 double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.8
@@ -14,3 +10,21 @@ double "/Preferences/auto.BoilerPositionBlue.drive2.speed"=-0.8
 int "/Preferences/auto.BoilerPositionBlue.drive3.distance"=-12
 double "/Preferences/auto.BoilerPositionBlue.drive3.speed"=-0.25
 double "/Preferences/auto.BoilerPositionBlue.gearApproach.speed"=0.5
+
+
+double "/Preferences/gear.Gear.open.leftServo"=15
+double "/Preferences/gear.Gear.open.rightServo"=15
+double "/Preferences/gear.Gear.close.leftServo"=90
+double "/Preferences/gear.Gear.close.rightServo"=90
+double "/Preferences/gear.Gear.superClose.leftServo"=0
+double "/Preferences/gear.Gear.superClose.rightServo"=180
+
+double "/Preferences/"vision.InclineCamera.boilerInitAngle"=50
+double "/Preferences/"vision.InclineCamera.pegInitAngle"=10
+double "/Preferences/"vision.InclineCamera.defaultDeltaCameraServo"=0.5
+
+double "/Preferences/"vision.PivotByVision.pivotSpeed"=0.6
+double "/Preferences/"vision.PivotByVision.defaultTurnAngle"=50
+
+
+double "/Preferences/winch.Winch.winchSpeed"=1
