Add prefs for all autonomous positions

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -1,16 +1,49 @@
 [NetworkTables Storage 3.0]
-double "/Preferences/auto.center.drive.distance"=93
-
 int "/Preferences/auto.BoilerPositionBlue.drive1.distance"=108
 double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.8
-double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.8
-int "/Preferences/auto.BoilerPositionBlue.pivot.distance"=108
+double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.5
+int "/Preferences/auto.BoilerPositionBlue.pivot.distance"=-45
 int "/Preferences/auto.BoilerPositionBlue.drive2.distance"=72
-double "/Preferences/auto.BoilerPositionBlue.drive2.speed"=-0.8
-int "/Preferences/auto.BoilerPositionBlue.drive3.distance"=-12
-double "/Preferences/auto.BoilerPositionBlue.drive3.speed"=-0.25
+double "/Preferences/auto.BoilerPositionBlue.drive2.speed"=0.8
 double "/Preferences/auto.BoilerPositionBlue.gearApproach.speed"=0.5
+int "/Preferences/auto.BoilerPositionBlue.drive3.distance"=-12
+double "/Preferences/auto.BoilerPositionBlue.drive3.speed"=-0.8
 
+int "/Preferences/auto.BoilerPositionRed.drive1.distance"=108
+double "/Preferences/auto.BoilerPositionRed.drive1.speed"=0.8
+double "/Preferences/auto.BoilerPositionRed.pivot.speed"=0.5
+int "/Preferences/auto.BoilerPositionRed.pivot.distance"=45
+int "/Preferences/auto.BoilerPositionRed.drive2.distance"=72
+double "/Preferences/auto.BoilerPositionRed.drive2.speed"=0.8
+double "/Preferences/auto.BoilerPositionRed.gearApproach.speed"=0.5
+int "/Preferences/auto.BoilerPositionRed.drive3.distance"=-12
+double "/Preferences/auto.BoilerPositionRed.drive3.speed"=-0.8
+
+int "/Preferences/auto.CenterPosition.drive1.distance"=93
+double "/Preferences/auto.CenterPosition.drive1.speed"=0.8
+double "/Preferences/auto.CenterPosition.gearApproach.speed"=0.5
+int "/Preferences/auto.CenterPosition.drive2.distance"=-12
+double "/Preferences/auto.CenterPosition.drive2.speed"=0.8
+
+int "/Preferences/auto.LoadingZonePositionBlue.drive1.distance"=102
+double "/Preferences/auto.LoadingZonePositionBlue.drive1.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionBlue.pivot.speed"=0.5
+int "/Preferences/auto.LoadingZonePositionBlue.pivot.distance"=45
+int "/Preferences/auto.LoadingZonePositionBlue.drive2.distance"=38
+double "/Preferences/auto.LoadingZonePositionBlue.drive2.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionBlue.gearApproach.speed"=0.5
+int "/Preferences/auto.LoadingZonePositionBlue.drive3.distance"=-12
+double "/Preferences/auto.LoadingZonePositionBlue.drive3.speed"=-0.8
+
+int "/Preferences/auto.LoadingZonePositionRed.drive1.distance"=102
+double "/Preferences/auto.LoadingZonePositionRed.drive1.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionRed.pivot.speed"=0.5
+int "/Preferences/auto.LoadingZonePositionRed.pivot.distance"=-45
+int "/Preferences/auto.LoadingZonePositionRed.drive2.distance"=38
+double "/Preferences/auto.LoadingZonePositionRed.drive2.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionRed.gearApproach.speed"=0.5
+int "/Preferences/auto.LoadingZonePositionRed.drive3.distance"=-12
+double "/Preferences/auto.LoadingZonePositionRed.drive3.speed"=-0.8
 
 double "/Preferences/gear.Gear.open.leftServo"=15
 double "/Preferences/gear.Gear.open.rightServo"=15
@@ -25,6 +58,5 @@ double "/Preferences/"vision.InclineCamera.defaultDeltaCameraServo"=0.5
 
 double "/Preferences/"vision.PivotByVision.pivotSpeed"=0.6
 double "/Preferences/"vision.PivotByVision.defaultTurnAngle"=50
-
 
 double "/Preferences/winch.Winch.winchSpeed"=1
