Normalize naming conventions and simplify code.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -52,11 +52,11 @@ double "/Preferences/gear.Gear.close.rightServo"=90
 double "/Preferences/gear.Gear.superClose.leftServo"=0
 double "/Preferences/gear.Gear.superClose.rightServo"=180
 
-double "/Preferences/"vision.InclineCamera.boilerInitAngle"=50
-double "/Preferences/"vision.InclineCamera.pegInitAngle"=10
-double "/Preferences/"vision.InclineCamera.defaultDeltaCameraServo"=0.5
+double "/Preferences/vision.InclineCamera.boilerInitAngle"=50
+double "/Preferences/vision.InclineCamera.pegInitAngle"=10
+double "/Preferences/vision.InclineCamera.defaultDeltaCameraServo"=0.5
 
-double "/Preferences/"vision.PivotByVision.pivotSpeed"=0.6
-double "/Preferences/"vision.PivotByVision.defaultTurnAngle"=50
+double "/Preferences/vision.PivotByVision.pivotSpeed"=0.6
+double "/Preferences/vision.PivotByVision.defaultTurnAngle"=50.0
 
-double "/Preferences/winch.Winch.winchSpeed"=1
+double "/Preferences/winch.Winch.speed"=-1
