Adds default/ending angle for cameraServo.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -55,6 +55,7 @@ double "/Preferences/gear.Gear.superClose.rightServo"=180
 double "/Preferences/vision.InclineCamera.boilerInitAngle"=50
 double "/Preferences/vision.InclineCamera.pegInitAngle"=10
 double "/Preferences/vision.InclineCamera.defaultDeltaCameraServo"=0.5
+double "/Preferences/vision.InclineCamera.endAngle"=80
 
 double "/Preferences/vision.PivotByVision.pivotSpeed"=0.6
 double "/Preferences/vision.PivotByVision.defaultTurnAngle"=50.0
