makes you be able to change the straight drive adjust rate in smartDashboard.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -45,6 +45,8 @@ double "/Preferences/auto.LoadingZonePositionRed.gearApproach.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.drive3.distance"=-12
 double "/Preferences/auto.LoadingZonePositionRed.drive3.speed"=-0.8
 
+double "/Preferences/drivetrain.DriveTrain.straight.adjustRate"=0.002
+
 double "/Preferences/gear.Gear.open.leftServo"=15
 double "/Preferences/gear.Gear.open.rightServo"=15
 double "/Preferences/gear.Gear.close.leftServo"=90
