Drve uses left and right Encoders from DriveTrain

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -25,6 +25,8 @@ double "/Preferences/auto.CenterPosition.gearApproach.speed"=0.5
 double "/Preferences/auto.CenterPosition.drive2.distance"=-12
 double "/Preferences/auto.CenterPosition.drive2.speed"=0.8
 
+double "/Preferences/auto.Drive.distance.tolerance"=0.2
+
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.distance"=102
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.speed"=0.8
 double "/Preferences/auto.LoadingZonePositionBlue.pivot.speed"=0.5
