Add Stovepipe Flap controls and put pin assignment in PWM class.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -51,6 +51,8 @@ double "/Preferences/gear.Gear.open.leftServo"=15
 double "/Preferences/gear.Gear.open.rightServo"=15
 double "/Preferences/gear.Gear.close.leftServo"=90
 double "/Preferences/gear.Gear.close.rightServo"=90
+double "/Preferences/gear.Gear.openStovePipeFlap.angle"=0
+double "/Preferences/gear.Gear.closeStovePipeFlap.angle"=180
 double "/Preferences/gear.Gear.superClose.leftServo"=0
 double "/Preferences/gear.Gear.superClose.rightServo"=180
 
