Encoder drive works if slow. And other changes....

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -20,12 +20,17 @@ double "/Preferences/auto.BoilerPositionRed.drive3.distance"=-12
 double "/Preferences/auto.BoilerPositionRed.drive3.speed"=-0.8
 
 double "/Preferences/auto.CenterPosition.drive1.distance"=93
-double "/Preferences/auto.CenterPosition.drive1.speed"=0.8
+double "/Preferences/auto.CenterPosition.drive1.speed"=0.5
 double "/Preferences/auto.CenterPosition.gearApproach.speed"=0.5
 double "/Preferences/auto.CenterPosition.drive2.distance"=-12
 double "/Preferences/auto.CenterPosition.drive2.speed"=0.8
 
-double "/Preferences/auto.Drive.distance.tolerance"=0.2
+double "/Preferences/auto.CenterNoEncoders.gearApproachSpeed"=-0.45
+double "/Preferences/auto.CenterNoEncoders.driveSpeed"=0.6
+double "/Preferences/auto.CenterNoEncoders.driveTime"=4
+double "/Preferences/auto.CenterNoEncoders.driveTimeout"=10
+
+double "/Preferences/auto.Drive.distance.tolerance"=0.006
 
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.distance"=102
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.speed"=0.8
@@ -46,6 +51,12 @@ double "/Preferences/auto.LoadingZonePositionRed.drive2.speed"=0.8
 double "/Preferences/auto.LoadingZonePositionRed.gearApproach.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.drive3.distance"=-12
 double "/Preferences/auto.LoadingZonePositionRed.drive3.speed"=-0.8
+
+double "/Preferences/auto.PivotTest.driveSpeed"=0.6
+double "/Preferences/auto.PivotTest.driveTime"=1
+double "/Preferences/auto.PivotTest.driveTimeout"=10
+
+double "/Preferences/drivetrian.DriveTrain.encoder.distancePerPulse"=0.25
 
 double "/Preferences/gear.Gear.open.leftServo"=15
 double "/Preferences/gear.Gear.open.rightServo"=15
