Add PivotByEncoders and set preferences to reasonable values.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -1,10 +1,10 @@
 [NetworkTables Storage 3.0]
 double "/Preferences/auto.BoilerPositionBlue.drive1.distance"=108
-double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.8
+double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.5
 double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.5
 double "/Preferences/auto.BoilerPositionBlue.pivot.distance"=-45
 double "/Preferences/auto.BoilerPositionBlue.drive2.distance"=72
-double "/Preferences/auto.BoilerPositionBlue.drive2.speed"=0.8
+double "/Preferences/auto.BoilerPositionBlue.drive2.speed"=0.5
 double "/Preferences/auto.BoilerPositionBlue.gearApproach.speed"=0.5
 double "/Preferences/auto.BoilerPositionBlue.drive3.distance"=-12
 double "/Preferences/auto.BoilerPositionBlue.drive3.speed"=-0.8
@@ -14,7 +14,7 @@ double "/Preferences/auto.BoilerPositionRed.drive1.speed"=0.8
 double "/Preferences/auto.BoilerPositionRed.pivot.speed"=0.5
 double "/Preferences/auto.BoilerPositionRed.pivot.distance"=45
 double "/Preferences/auto.BoilerPositionRed.drive2.distance"=72
-double "/Preferences/auto.BoilerPositionRed.drive2.speed"=0.8
+double "/Preferences/auto.BoilerPositionRed.drive2.speed"=0.5
 double "/Preferences/auto.BoilerPositionRed.gearApproach.speed"=0.5
 double "/Preferences/auto.BoilerPositionRed.drive3.distance"=-12
 double "/Preferences/auto.BoilerPositionRed.drive3.speed"=-0.8
@@ -25,47 +25,43 @@ double "/Preferences/auto.CenterPosition.gearApproach.speed"=0.5
 double "/Preferences/auto.CenterPosition.drive2.distance"=-12
 double "/Preferences/auto.CenterPosition.drive2.speed"=0.8
 
-double "/Preferences/auto.CenterNoEncoders.gearApproachSpeed"=-0.45
-double "/Preferences/auto.CenterNoEncoders.driveSpeed"=0.6
-double "/Preferences/auto.CenterNoEncoders.driveTime"=4
-double "/Preferences/auto.CenterNoEncoders.driveTimeout"=10
-
 double "/Preferences/auto.Drive.distance.tolerance"=0.006
 
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.distance"=102
-double "/Preferences/auto.LoadingZonePositionBlue.drive1.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionBlue.drive1.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionBlue.pivot.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionBlue.pivot.distance"=45
 double "/Preferences/auto.LoadingZonePositionBlue.drive2.distance"=38
-double "/Preferences/auto.LoadingZonePositionBlue.drive2.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionBlue.drive2.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionBlue.gearApproach.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionBlue.drive3.distance"=-12
 double "/Preferences/auto.LoadingZonePositionBlue.drive3.speed"=-0.8
 
 double "/Preferences/auto.LoadingZonePositionRed.drive1.distance"=102
-double "/Preferences/auto.LoadingZonePositionRed.drive1.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionRed.drive1.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.pivot.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.pivot.distance"=-45
 double "/Preferences/auto.LoadingZonePositionRed.drive2.distance"=38
-double "/Preferences/auto.LoadingZonePositionRed.drive2.speed"=0.8
+double "/Preferences/auto.LoadingZonePositionRed.drive2.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.gearApproach.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.drive3.distance"=-12
 double "/Preferences/auto.LoadingZonePositionRed.drive3.speed"=-0.8
 
-double "/Preferences/auto.PivotTest.driveSpeed"=0.6
-double "/Preferences/auto.PivotTest.driveTime"=1
-double "/Preferences/auto.PivotTest.driveTimeout"=10
+double "/Preferences/auto.PivotByEncoders.speed"=0.5
+double "/Preferences/auto.PivotByEncoders.degreesPerPulse"=1.0
+double "/Preferences/auto.PivotByEncoders.tolerance"=2.0
 
-double "/Preferences/drivetrian.DriveTrain.encoder.distancePerPulse"=0.25
+double "/Preferences/drivetrian.DriveTrain.encoder.distancePerPulse"=0.006
 
 double "/Preferences/gear.Gear.open.leftServo"=15
 double "/Preferences/gear.Gear.open.rightServo"=15
 double "/Preferences/gear.Gear.close.leftServo"=90
 double "/Preferences/gear.Gear.close.rightServo"=90
-double "/Preferences/gear.Gear.openStovePipeFlap.angle"=0
-double "/Preferences/gear.Gear.closeStovePipeFlap.angle"=180
 double "/Preferences/gear.Gear.superClose.leftServo"=0
 double "/Preferences/gear.Gear.superClose.rightServo"=180
+
+double "/Preferences/gear.Gear.openStovePipeFlap.angle"=0
+double "/Preferences/gear.Gear.closeStovePipeFlap.angle"=180
 
 double "/Preferences/vision.InclineCamera.boilerInitAngle"=50
 double "/Preferences/vision.InclineCamera.pegInitAngle"=10
@@ -73,6 +69,6 @@ double "/Preferences/vision.InclineCamera.defaultDeltaCameraServo"=0.5
 double "/Preferences/vision.InclineCamera.endAngle"=80
 
 double "/Preferences/vision.PivotByVision.pivotSpeed"=0.6
-double "/Preferences/vision.PivotByVision.defaultTurnAngle"=50.0
+double "/Preferences/vision.PivotByVision.defaultTurnAngle"=45.0
 
 double "/Preferences/winch.Winch.speed"=-1
