Autonomous uses PivotByEncoders.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -2,13 +2,13 @@
 double "/Preferences/auto.BoilerPositionBlue.drive1.distance"=101
 double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.5
 double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.5
-double "/Preferences/auto.BoilerPositionBlue.pivot.distance"=-90
+double "/Preferences/auto.BoilerPositionBlue.pivot.angle"=-90
 
 
 double "/Preferences/auto.BoilerPositionRed.drive1.distance"=101
 double "/Preferences/auto.BoilerPositionRed.drive1.speed"=0.5
 double "/Preferences/auto.BoilerPositionRed.pivot.speed"=0.5
-double "/Preferences/auto.BoilerPositionRed.pivot.distance"=90
+double "/Preferences/auto.BoilerPositionRed.pivot.angle"=90
 
 
 double "/Preferences/auto.CenterPosition.drive1.distance"=93
@@ -22,17 +22,17 @@ double "/Preferences/auto.Drive.distance.tolerance"=0.006
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.distance"=94
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionBlue.pivot.speed"=0.5
-double "/Preferences/auto.LoadingZonePositionBlue.pivot.distance"=60
+double "/Preferences/auto.LoadingZonePositionBlue.pivot.angle"=60
 
 
 double "/Preferences/auto.LoadingZonePositionRed.drive1.distance"=94
 double "/Preferences/auto.LoadingZonePositionRed.drive1.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.pivot.speed"=0.5
-double "/Preferences/auto.LoadingZonePositionRed.pivot.distance"=-60
+double "/Preferences/auto.LoadingZonePositionRed.pivot.angle"=-60
 
 
-double "/Preferences/auto.PivotByEncoders.speed"=0.5
-double "/Preferences/auto.PivotByEncoders.degreesPerPulse"=1.0
+double "/Preferences/auto.PivotByEncoders.speed"=0.6
+double "/Preferences/auto.PivotByEncoders.degreesPerPulse"=12.0
 double "/Preferences/auto.PivotByEncoders.tolerance"=2.0
 
 double "/Preferences/drivetrian.DriveTrain.encoder.distancePerPulse"=0.006
