--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -10,12 +10,10 @@ double "/Preferences/auto.BoilerPositionRed.drive1.speed"=0.5
 double "/Preferences/auto.BoilerPositionRed.pivot.speed"=0.5
 double "/Preferences/auto.BoilerPositionRed.pivot.angle"=90
 
-
-double "/Preferences/auto.CenterPosition.drive1.distance"=93
-double "/Preferences/auto.CenterPosition.drive1.speed"=0.5
-double "/Preferences/auto.CenterPosition.gearApproach.speed"=0.5
-double "/Preferences/auto.CenterPosition.drive2.distance"=-12
-double "/Preferences/auto.CenterPosition.drive2.speed"=0.8
+double "/Preferences/auto.CenterNoEncoders.gearApproachSpeed"=0.45
+double "/Preferences/auto.CenterNoEncoders.driveSpeed"=0.6
+double "/Preferences/auto.CenterNoEncoders.driveTime"=2
+double "/Preferences/auto.CenterNoEncoders.driveTimeout"=5
 
 double "/Preferences/auto.Drive.distance.tolerance"=0.006
 
