Competition changes. Too many to track.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -1,14 +1,14 @@
 [NetworkTables Storage 3.0]
-double "/Preferences/auto.BoilerPositionBlue.drive1.distance"=101
+double "/Preferences/auto.BoilerPositionBlue.drive1.distance"=90
 double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.5
-double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.5
-double "/Preferences/auto.BoilerPositionBlue.pivot.angle"=-90
+double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.7
+double "/Preferences/auto.BoilerPositionBlue.pivot.angle"=60
 
 
-double "/Preferences/auto.BoilerPositionRed.drive1.distance"=101
+double "/Preferences/auto.BoilerPositionRed.drive1.distance"=90
 double "/Preferences/auto.BoilerPositionRed.drive1.speed"=0.5
-double "/Preferences/auto.BoilerPositionRed.pivot.speed"=0.5
-double "/Preferences/auto.BoilerPositionRed.pivot.angle"=90
+double "/Preferences/auto.BoilerPositionRed.pivot.speed"=0.7
+double "/Preferences/auto.BoilerPositionRed.pivot.angle"=-60
 
 double "/Preferences/auto.CenterNoEncoders.gearApproachSpeed"=0.45
 double "/Preferences/auto.CenterNoEncoders.driveSpeed"=-0.6
@@ -17,16 +17,16 @@ double "/Preferences/auto.CenterNoEncoders.driveTimeout"=5
 
 double "/Preferences/auto.Drive.distance.tolerance"=0.006
 
-double "/Preferences/auto.LoadingZonePositionBlue.drive1.distance"=94
+double "/Preferences/auto.LoadingZonePositionBlue.drive1.distance"=90
 double "/Preferences/auto.LoadingZonePositionBlue.drive1.speed"=0.5
-double "/Preferences/auto.LoadingZonePositionBlue.pivot.speed"=0.5
-double "/Preferences/auto.LoadingZonePositionBlue.pivot.angle"=60
+double "/Preferences/auto.LoadingZonePositionBlue.pivot.speed"=0.7
+double "/Preferences/auto.LoadingZonePositionBlue.pivot.angle"=-60
 
 
-double "/Preferences/auto.LoadingZonePositionRed.drive1.distance"=94
+double "/Preferences/auto.LoadingZonePositionRed.drive1.distance"=90
 double "/Preferences/auto.LoadingZonePositionRed.drive1.speed"=0.5
-double "/Preferences/auto.LoadingZonePositionRed.pivot.speed"=0.5
-double "/Preferences/auto.LoadingZonePositionRed.pivot.angle"=-60
+double "/Preferences/auto.LoadingZonePositionRed.pivot.speed"=0.7
+double "/Preferences/auto.LoadingZonePositionRed.pivot.angle"=60
 
 
 double "/Preferences/auto.PivotByEncoders.speed"=0.7
@@ -35,15 +35,17 @@ double "/Preferences/auto.PivotByEncoders.tolerance"=0.005
 
 double "/Preferences/drivetrian.DriveTrain.encoder.distancePerPulse"=0.006
 
-double "/Preferences/gear.Gear.open.leftServo"=15
-double "/Preferences/gear.Gear.open.rightServo"=15
-double "/Preferences/gear.Gear.close.leftServo"=90
-double "/Preferences/gear.Gear.close.rightServo"=90
-double "/Preferences/gear.Gear.superClose.leftServo"=0
-double "/Preferences/gear.Gear.superClose.rightServo"=180
+double "/Preferences/gear.Gear.open.leftServo"=0
+double "/Preferences/gear.Gear.open.rightServo"=180
+double "/Preferences/gear.Gear.close.leftServo"=70
+double "/Preferences/gear.Gear.close.rightServo"=95
+double "/Preferences/gear.Gear.superClose.leftServo"=90
+double "/Preferences/gear.Gear.superClose.rightServo"=90
 
 double "/Preferences/gear.Gear.openStovePipeFlap.angle"=0
 double "/Preferences/gear.Gear.closeStovePipeFlap.angle"=180
+
+double "/Preferences/TestCANCommand.id"=6
 
 double "/Preferences/vision.InclineCamera.boilerInitAngle"=50
 double "/Preferences/vision.InclineCamera.pegInitAngle"=10
@@ -53,4 +55,4 @@ double "/Preferences/vision.InclineCamera.endAngle"=80
 double "/Preferences/vision.PivotByVision.pivotSpeed"=0.6
 double "/Preferences/vision.PivotByVision.defaultTurnAngle"=45.0
 
-double "/Preferences/winch.Winch.speed"=-1
+double "/Preferences/winch.Winch.speed"=1
