--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -4,7 +4,6 @@ double "/Preferences/auto.BoilerPositionBlue.drive1.speed"=0.5
 double "/Preferences/auto.BoilerPositionBlue.pivot.speed"=0.7
 double "/Preferences/auto.BoilerPositionBlue.pivot.angle"=60
 
-
 double "/Preferences/auto.BoilerPositionRed.drive1.distance"=90
 double "/Preferences/auto.BoilerPositionRed.drive1.speed"=0.5
 double "/Preferences/auto.BoilerPositionRed.pivot.speed"=0.7
@@ -28,12 +27,12 @@ double "/Preferences/auto.LoadingZonePositionRed.drive1.speed"=0.5
 double "/Preferences/auto.LoadingZonePositionRed.pivot.speed"=0.7
 double "/Preferences/auto.LoadingZonePositionRed.pivot.angle"=60
 
-
 double "/Preferences/auto.PivotByEncoders.speed"=0.7
 double "/Preferences/auto.PivotByEncoders.degreesPerPulse"=0.032
 double "/Preferences/auto.PivotByEncoders.tolerance"=0.005
 
 double "/Preferences/drivetrian.DriveTrain.encoder.distancePerPulse"=0.006
+double "/Preferences/drivetrain.DriveTrain.straightening.multiplier"=0.005
 
 double "/Preferences/gear.Gear.open.leftServo"=0
 double "/Preferences/gear.Gear.open.rightServo"=180
