End of Friday competition.

--- a/Initial_Preferences.ini
+++ b/Initial_Preferences.ini
@@ -33,6 +33,7 @@ double "/Preferences/auto.PivotByEncoders.tolerance"=0.005
 
 double "/Preferences/drivetrian.DriveTrain.encoder.distancePerPulse"=0.006
 double "/Preferences/drivetrain.DriveTrain.straightening.multiplier"=0.005
+double "/Preferences/drivetrain.DriveTrain.straightening.rightAdd"=0.03
 
 double "/Preferences/gear.Gear.open.leftServo"=0
 double "/Preferences/gear.Gear.open.rightServo"=180
